Added : Requried Functions
